исправления по замечаниям проверяющего

--- a/hotels.html
+++ b/hotels.html
@@ -23,7 +23,7 @@
                         <a class="navigation__link navigation__link-hotels" href="hotels.html">Гостиницы</a>
                      </li>
                   </ul>
-                  <a class="logo__sedona" href="index.html"><img src="images/sedona.svg" class="logo" alt="Логотип Седона"></a>
+                  <a class="logo__sedona" href="index.html"><img src="images/sedona.svg" class="logo" alt="Логотип Седона."></a>
                   <!-- navigation__user -->
                   <ul class="navigation-user" >
                      <li class="navigation__item-user">
@@ -50,7 +50,7 @@
                               <ul class="popover__favorite-list">
                                  <li class="popover__favorite-item">
                                     <a class="popover__favorite-link">
-                                       <img class="popover__favorite-img" src="images/content/hotel-2-small.jpg" alt="фото гостиницы">
+                                       <img class="popover__favorite-img" src="images/content/hotel-2-small.jpg" alt="фото гостиницы.">
                                        <p class="popover__favorite-title">Desert Quail Inn</p>
                                        <p class="popover__favorite-decription">Мотель</p>
                                     </a>
@@ -58,7 +58,7 @@
                                  </li>
                                  <li class="popover__favorite-item">
                                     <a class="popover__favorite-link">
-                                       <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="фото гостиницы">
+                                       <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="фото гостиницы.">
                                        <p class="popover__favorite-title">Villas at Poco Diablo</p>
                                        <p class="popover__favorite-decription">Апартаменты</p>
                                     </a>
@@ -238,7 +238,7 @@
                   <ul class="hotels__list">
                      <li class="hotels__card">
                         <a class="hotels__card-link" href="#">
-                        <img class="hotels__card-img" src="images/content/hotel-1.jpg" alt="Гостиница Amara Resort & Spa">
+                        <img class="hotels__card-img" src="images/content/hotel-1.jpg" alt="Гостиница Amara Resort & Spa.">
                         </a>
                         <a class="hotels__title-link" href="#">
                            <h3 class="hotels__card-title">Amara Resort & Spa</h3>
@@ -248,11 +248,11 @@
                         <a href="#" class="hotels__card-button">Подробнее</a>
                         <button class="hotels__favorite button__blue"  type="button">В избранное</button>
                         <span class="hotels__rating">Рейтинг: 8,5</span>
-                        <img class="stars" src="images/stars-4.svg" alt="">
+                        <img class="stars" src="images/stars-4.svg" alt="четыре звезды.">
                      </li>
                      <li class="hotels__card">
                         <a class="hotels__card-link" href="#">
-                        <img class="hotels__card-img" src="images/content/hotel-2.jpg" alt="Мотель Desert Quail Inn">
+                        <img class="hotels__card-img" src="images/content/hotel-2.jpg" alt="Мотель Desert Quail Inn.">
                         </a>
                         <a class="hotels__title-link" href="#">
                            <h3 class="hotels__card-title">Desert Quail Inn</h3>
@@ -262,11 +262,11 @@
                         <a href="#" class="hotels__card-button">Подробнее</a>
                         <button class="hotels__favorite button__blue" type="button">В избранное</button>
                         <span class="hotels__rating">Рейтинг: 8,9</span>
-                        <img class="stars" src="images/stars-3.svg" alt="">
+                        <img class="stars" src="images/stars-3.svg" alt="три звезды.">
                      </li>
                      <li class="hotels__card">
                         <a class="hotels__card-link" href="#">
-                        <img class="hotels__card-img" src="images/content/hotel-3.jpg" alt="Апартаменты Villas at Poco Diablo">
+                        <img class="hotels__card-img" src="images/content/hotel-3.jpg" alt="Апартаменты Villas at Poco Diablo.">
                         </a>
                         <a class="hotels__title-link" href="#">
                            <h3 class="hotels__card-title">Villas at Poco Diablo</h3>
@@ -280,7 +280,7 @@
                      </li>
                      <li class="hotels__card">
                         <a class="hotels__card-link" href="#">
-                        <img class="hotels__card-img" src="images/content/hotel-4.jpg" alt="Гостиница GreenTree Inn">
+                        <img class="hotels__card-img" src="images/content/hotel-4.jpg" alt="Гостиница GreenTree Inn.">
                         </a>
                         <a class="hotels__title-link" href="#">
                            <h3 class="hotels__card-title">GreenTree Inn</h3>
@@ -290,7 +290,7 @@
                         <a href="#" class="hotels__card-button">Подробнее</a>
                         <button class="hotels__favorite button__blue" type="button">В избранноe</button>
                         <span class="hotels__rating">Рейтинг: 9,2</span>
-                        <img class="stars" src="images/stars-2.svg" alt="">
+                        <img class="stars" src="images/stars-2.svg" alt="две здвезды.">
                      </li>
                   </ul>
                   <button class="botton__show-more button__blue" type="button">Загрузить еще</button>
