--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
                      </li>
                      <li class="navigation__item">
                         <a class="navigation__link" href="hotels.html">Гостиницы</a>
-                     </li>
                   </ul>
                   <a class="logo__sedona" href="index.html">
-                  <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
+                  <img src="images/sedona.svg" class="logo" alt="Логотип Седона.">
                   </a>
                   <!-- navigation__user -->
                   <ul class="navigation-user" >
@@ -52,7 +51,7 @@
                               <ul class="popover__favorite-list">
                                  <li class="popover__favorite-item">
                                     <a class="popover__favorite-link">
-                                       <img class="popover__favorite-img" src="images/content/hotel-2-small.jpg" alt="фото гостиницы">
+                                       <img class="popover__favorite-img" src="images/content/hotel-2-small.jpg" alt="фото гостиницы.">
                                        <p class="popover__favorite-title">Desert Quail Inn</p>
                                        <p class="popover__favorite-decription">Мотель</p>
                                     </a>
@@ -60,7 +59,7 @@
                                  </li>
                                  <li class="popover__favorite-item">
                                     <a class="popover__favorite-link">
-                                       <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="фото гостиницы">
+                                       <img class="popover__favorite-img" src="images/content/hotel-3-small.jpg" alt="фото гостиницы.">
                                        <p class="popover__favorite-title">Villas at Poco Diablo</p>
                                        <p class="popover__favorite-decription">Апартаменты</p>
                                     </a>
@@ -82,7 +81,7 @@
          <main class="main__index">
             <div class="main__container">
                <div class="welcome">
-                  <img src="images/welcome.svg" alt="Добро пожаловать в Седону" class="welcome__img">
+                  <img src="images/welcome.svg" alt="Добро пожаловать в Седону." class="welcome__img">
                </div>
                <div class="welcome__text">
                   <h1 class="welcome__title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
