исправила замечания наставника, очередная попытка отправить на проверку

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                      </li>
                      <li class="navigation__item-button">
-                        <a class="navigation__link-button button" href="#">Хочу сюда</a>
+                        <a class="navigation__link-button button" href="#">Хочу сюда!</a>
                      </li>
                   </ul>
                </nav>
